--- a/esp32/MyFirstESP32/platformio.ini
+++ b/esp32/MyFirstESP32/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 upload_port = COM10
 monitor_port = COM10
 monitor_speed = 115200
+lib_deps = 
+    tzapu/WiFiManager @ ^2.0.17
